ecmascript/parser/tests/test262-error-references/fail/7222f595c694ef81.module.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/7222f595c694ef81.module.js:1:11
  |
1 | export {a,,}
  |           ^

